Added not avaliable status also

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,8 @@
             <mat-icon>restore</mat-icon>Reinstate</a>
         </li>
         <li>
-          <a href="#" routerLinkActive="active" tdLayoutClose>
-            <mat-icon>feedback</mat-icon>Feedback</a>
+          <a [routerLink]="['notavaliable']" routerLinkActive="active" tdLayoutClose>
+            <mat-icon>block</mat-icon>Not Avaliable</a>
         </li>
       </ol>
     </mat-nav-list>
@@ -85,9 +85,9 @@
           </a>
         </li>
         <li>
-          <a href="#" routerLinkActive="active">
-            <mat-icon>feedback</mat-icon>
-            <span class="responsive">Feedback</span>
+          <a [routerLink]="['notavaliable']" routerLinkActive="active">
+            <mat-icon>block</mat-icon>
+            <span class="responsive">Not Avaliable</span>
           </a>
         </li>
       </ul>
