--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -20,6 +20,11 @@
         <span class="responsive">Reserved Books</span>
       </a>
     </div>
+    <div>
+      <a (click)="notAvaliablebooks()" [ngStyle]="style_notAvaliable">
+        <span class="responsive">Not Avaliable Books </span>
+      </a>
+    </div>
   </div>
 
 
