--- a/src/app/books/books.component.css
+++ b/src/app/books/books.component.css
@@ -17,7 +17,7 @@ body {
   background-color: white;
   border-radius: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 a {
