--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <td-layout>
-  <td-navigation-drawer flex sidenavTitle="Library" logo="assets:teradata" name="Firstname Lastname" email="firstname.lastname@company.com">
+  <td-navigation-drawer flex sidenavTitle="Library" logo="teradata" name="Firstname Lastname" email="firstname.lastname@company.com">
     <mat-nav-list>
       <ol>
         <li>
@@ -33,7 +33,7 @@
       <mat-nav-list>
         <ol>
           <li>
-            <a href="#">Admin Section</a>
+            <a [routerLink]="['admin']" routerLinkActive="active" tdLayoutClose>Admin Section</a>
           </li>
         </ol>
         <!-- <a *ngFor="let item of usermenu" mat-list-item>
@@ -48,8 +48,8 @@
       <button mat-icon-button td-menu-button tdLayoutToggle>
         <mat-icon>menu</mat-icon>
       </button>
-      <mat-icon [routerLink]="['/']" class="mat-icon-logo cursor-pointer" svgIcon="assets:teradata">
-        <b>Teradata</b>
+      <mat-icon [routerLink]="['/']" class="mat-icon-logo cursor-pointer" svgIcon="teradata">
+
       </mat-icon>
       <span [routerLink]="['/']" class="cursor-pointer">Library</span>
       <span flex></span>
