--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,7 @@
         </li>
       </ul>
     </div>
-    <router-outlet></router-outlet>
+    <app-middle></app-middle>
     <td-layout-footer>
       <div layout="row" layout-align="start center">
         <span class="mat-caption">Copyright &copy; 2017 Teradata. All rights reserved</span>
