added admin section and normal user part is working fine admin part is to be set

--- a/src/app/admin-section/admin-section.component.css
+++ b/src/app/admin-section/admin-section.component.css
@@ -4,7 +4,7 @@ body {
   font-family: "Open Sans", sans-serif;
   line-height: 1.25;
 }
-
+/*
 .middle-div {
   width: 90%;
   margin: auto;
@@ -50,4 +50,4 @@ h3 {
 
 .mat-title {
   color: green;
-}
+} */
