--- a/src/app/admin-section/admin-section.component.html
+++ b/src/app/admin-section/admin-section.component.html
@@ -1,22 +1,56 @@
+<div layout="row" layout-align="start center" class="pad-left-sm pad-right-sm" style="background-color: orange">
+  <span *ngIf="!searchBox.searchVisible" class="push-left-sm">
+    <span class="mat-title">TIES Library Books</span>
+    <span class="mat-title" *ngIf="router.url=='/books'">-Reserve Books</span>
+    <span class="mat-title" *ngIf="router.url=='/remove'">-Removing Books</span>
+    <span class="mat-title" *ngIf="router.url=='/reinstate'">-Reinstate Books</span>
+  </span>
+  <span *ngIf="!searchBox.searchVisible" class="push-left-sm">
+  </span>
+  <td-search-box #searchBox backIcon="arrow_back" class="push-right-sm" placeholder="Search here" (searchDebounce)="search($event)"
+    flex>
+  </td-search-box>
+</div>
+
 <table td-data-table>
   <thead>
     <tr td-data-table-column-row>
       <th td-data-table-column *ngFor="let column of columns" [numeric]="column.numeric">
         {{column.label}}
       </th>
-      <th td-data-table-column>
-        <mat-icon>comment</mat-icon>
-        <span>Comments</span>
+      <th td-data-table-column *ngIf="state == 3 || state == 0">
+        <mat-icon>update</mat-icon>
+        <span>Reinstate</span>
+      </th>
+      <th td-data-table-column *ngIf="state !=2">
+        <mat-icon>delete_outline</mat-icon>
+        <span>Remove</span>
+      </th>
+      <th td-data-table-column *ngIf="state == 3 || state == 2">
+        <mat-icon>add_box</mat-icon>
+        <span>Add</span>
       </th>
     </tr>
   </thead>
   <tbody>
-    <tr td-data-table-row *ngFor="let row of books">
+    <tr td-data-table-row *ngFor="let row of filteredData">
       <td td-data-table-cell *ngFor="let column of columns" [numeric]="column.numeric">
         {{column.format ? column.format(row[column.name]) : row[column.name]}}
       </td>
-      <td td-data-table-cell (click)="openPrompt(row, 'comments')">
-        <button mat-button [class.mat-accent]="!row['comments']">{{row['comments'] || 'Add Comment'}}</button>
+      <td td-data-table-cell (click)="openConfirm(row,'reinstate')" *ngIf="state == 3 || state == 0">
+        <button mat-button [class.mat-accent]="!row['comments']">
+          <mat-icon>update</mat-icon>
+        </button>
+      </td>
+      <td td-data-table-cell (click)="openConfirm(row,'remove')" *ngIf="state !=2">
+        <button mat-button [class.mat-accent]="!row['comments']">
+          <mat-icon>highlight_off</mat-icon>
+        </button>
+      </td>
+      <td td-data-table-cell (click)="openConfirm(row,'add')" *ngIf="state == 3 || state == 2">
+        <button mat-button [class.mat-accent]="!row['comments']">
+          <mat-icon>library_add</mat-icon>
+        </button>
       </td>
     </tr>
   </tbody>
