--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -18,5 +18,5 @@
 </td-data-table>
 
 <div class="md-padding" *ngIf="!dataTable.hasData" layout="row" layout-align="center center">
-  <h3>No results to display.</h3>
+  <h3>No More Books to display.</h3>
 </div>
