--- a/src/app/middle/middle.component.css
+++ b/src/app/middle/middle.component.css
@@ -18,6 +18,7 @@ body {
   border-radius: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  cursor: pointer;
 }
 
 a {
@@ -25,6 +26,7 @@ a {
   text-align: center;
   padding: 15px 10px;
   text-decoration: none;
+  cursor: pointer;
 }
 
 a:hover:not(.active) {
