--- a/src/app/admin-section/admin-section.component.html
+++ b/src/app/admin-section/admin-section.component.html
@@ -64,5 +64,5 @@
 </table>
 
 <div class="md-padding" *ngIf="!filteredData.hasData" layout="row" layout-align="center center">
-  <h3>No Books to display.</h3>
+  <h3>No More Books to display.</h3>
 </div>
