--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,11 @@
+[_nghost-c5] {
+  background-image: linear-gradient(
+      rgba(157, 222, 224, 0.25),
+      rgba(193, 228, 153, 0.05)
+    ),
+    url("../assets/Library_home_image.jpg");
+}
+
 ol {
   list-style-type: none;
   margin: 0;
